apps/bjj/dev/networking/gateways/gateway-grafana-dev.yaml
# Gateway pentru accesul la Grafana în dezvoltare
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-grafana-dev
  namespace: bjj
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    hostname: grafana-dev.cardano.vip
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: grafana-dev.cardano.vip
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: grafana-dev-cardano-vip-tls
    allowedRoutes:
      namespaces:
        from: All
